tests/conformance/fail/generics/mismatch.ny
fn main() {
    let _ = pair(1, "two")
}

fn pair(a: i32, b: i32) -> i32 {
    return a + b
}
